Bug 990806, part 2 - Fix "Assertion failure: gGotError, at js/src/shell/js.cpp:448" after OOM in the shell by setting gGotError from an out-of-memory callback. r=terrence.